add possibility for additional scrapers via the "source" param
