# docs/swagger.json
@@ -50,7 +50,7 @@
                     {
                         "type": "string",
                         "description": "Job Title",
-                        "name": "title",
+                        "name": "jobTitle",
                         "in": "query",
                         "required": true
                     },
@@ -63,14 +63,32 @@
                     },
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "Number of Pages",
                         "name": "pages",
                         "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "indeed",
+                            "linkedin"
+                        ],
+                        "type": "string",
+                        "description": "Source of job listings (indeed or linkedin)",
+                        "name": "source",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "202": {
                         "description": "Scraping started",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
@@ -98,6 +116,9 @@
                 "platform_job_id": {
                     "type": "string"
                 },
+                "source": {
+                    "$ref": "#/definitions/scraper.ScraperType"
+                },
                 "summary": {
                     "type": "string"
                 },
@@ -108,6 +129,17 @@
                     "type": "string"
                 }
             }
+        },
+        "scraper.ScraperType": {
+            "type": "string",
+            "enum": [
+                "indeed",
+                "linkedin"
+            ],
+            "x-enum-varnames": [
+                "Indeed",
+                "LinkedIn"
+            ]
         }
     }
 }
